win32JNA/inc/numeric.h

/**
 * Rounding mode to round towards positive infinity. If the Numeric is positive, behaves as for NUMERIC_ROUND_UP; if negative, behaves as for NUMERIC_ROUND_DOWN. Note that this rounding mode never decreases the calculated value.
 */
#define NUMERIC_ROUND_CEILING (2)
/**
 * Rounding mode to round towards negative infinity. If the Numeric is positive, behave as for NUMERIC_ROUND_DOWN; if negative, behave as for NUMERIC_ROUND_UP. Note that this rounding mode never increases the calculated value. 
 */
#define NUMERIC_ROUND_FLOOR (3)
/* INFO CODES */

/**
 * Return code indicating the result is NaN.
 */
#define NUMERIC_INFO_NAN (1)
/**
 * Return code indicating the result has been truncated.
 */
#define NUMERIC_INFO_TRUNCATED (2)
/**
 * Return code indicating overflow has occurred.
 */
#define NUMERIC_INFO_OVERFLOW (3)
/**
 * Return code indicating underflow has occurred.
 */
#define NUMERIC_INFO_UNDERFLOW (4)
typedef int NUMERIC_INT32;
typedef unsigned int NUMERIC_UINT32;
typedef unsigned __int64 NUMERIC_UINT64;
typedef unsigned long long NUMERIC_UINT64;
/* TODO: USE NAMED STRUCT INSTEAD */
typedef struct {
  union {
    struct {
#ifdef NUMERIC_LITTLE_ENDIAN
      NUMERIC_UINT64 r0;
      NUMERIC_UINT64 r1;
#else
      NUMERIC_UINT64 r1;
      NUMERIC_UINT64 r0;
#endif
    };
    struct {
#ifdef NUMERIC_LITTLE_ENDIAN
      NUMERIC_UINT32 e0;
      NUMERIC_UINT32 e1;
      NUMERIC_UINT32 e2;
      NUMERIC_UINT32 e3;
#else
      NUMERIC_UINT32 e3;
      NUMERIC_UINT32 e2;
      NUMERIC_UINT32 e1;
      NUMERIC_UINT32 e0;
#endif
    };
  };
} Numeric;
typedef struct {
  NUMERIC_INT32 scale;
  NUMERIC_INT32 rounding_mode;
} NumericInfo;
/**
 * Performs subtraction.
 * @param[in] info_a->scale scale of a
 * @param[in] info_b->scale scale of b
 * @param[in] info_c->scale scale of c
 * @param[in] info_c->rounding_mode the rounding mode to be applied
 * @param[in] a unscaled multiplier
 * @param[in] b unscaled multiplicand
 * @param[out] c buffer to hold the unscaled value of the result (The caller must prepare the buffer beforehand.)
 * @retval 0 Success. The result is stored in c.
 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.
 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.
 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.
 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.
 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW
 */
EXPORT NUMERIC_INT32 RD5NumericRescalingMul(const NumericInfo* info_a,const NumericInfo* info_b,const NumericInfo* info_c,const Numeric* a,const Numeric* b,Numeric* c);
/**
 * Performs division.
 * @param[in] info_a->scale scale of a
 * @param[in] info_b->scale scale of b
 * @param[in] info_c->scale scale of c
 * @param[in] info_c->rounding_mode the rounding mode to be applied
 * @param[in] a unscaled dividend
 * @param[in] b unscaled divisor
 * @param[out] c buffer to hold the unscaled value of the result (The caller must prepare the buffer beforehand.)
 * @retval 0 Success. The result is stored in c.
 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.
 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.
 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.
 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.
 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW
 */
EXPORT NUMERIC_INT32 RD5NumericRescalingDiv(const NumericInfo* info_a,const NumericInfo* info_b,const NumericInfo* info_c,const Numeric* a,const Numeric* b,Numeric* c);
/**
 * Performs comparison. NaN is assumed to be smaller than any Numeric that is not a NaN. Two NaNs are assumed to be equal.
 * @param[in] info_a->scale scale of a
 * @param[in] info_b->scale scale of b
 * @param[in] a unscaled value to be compared with b
 * @param[in] b unscaled value to be compared with a
 * @retval 1 if b is bigger than a.
 * @retval 0 if b is equal to a.
 * @retval -1 if b is smaller than a.
 */
EXPORT NUMERIC_INT32 RD5NumericRescalingCmp(const NumericInfo* info_a,const NumericInfo* info_b,const Numeric* a,const Numeric* b);
/**
 * Performs rounding towards positive infinity. Equlvalent to numeric_round with info_c->rounding_mode=NUMERIC_ROUND_CEILING.
 * @param[in] info_c->scale scale of c
 * @param[in] prec precision (number of fractional digits) of the result 
 * @param[in,out] c unscaled value to be rounded towards positive infinity
 * @retval 0 Success. The result is stored in c.
 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.
 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.
 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.
 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW
 */
EXPORT NUMERIC_INT32 RD5NumericCeil(const NumericInfo* info_c,const NUMERIC_INT32 prec,Numeric* c);
/**
 * Performs rounding towards negative infinity. Equlvalent to numeric_round with info_c->rounding_mode=NUMERIC_ROUND_FLOOR.
 * @param[in] info_c->scale scale of c
 * @param[in] prec precision (number of fractional digits) of the result
 * @param[in,out] c unscaled value to be rounded towards negative infinity
 * @retval 0 Success. The result is stored in c.
 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.
 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.
 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.
 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_UNDERFLOW
 */
EXPORT NUMERIC_INT32 RD5NumericFloor(const NumericInfo* info_c,const NUMERIC_INT32 prec,Numeric* c);
/**
 * Performs rounding.
 * @param[in] info_c->scale scale of c
 * @param[in] info_c->rounding_mode rounding mode to be applied
 * @param[in] prec precision (number of fractional digits) of the result
 * @param[in,out] c unscaled value to be rounded
 * @retval 0 Success. The result is stored in c.
 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.
 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.
 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.
 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.
 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW
 */
EXPORT NUMERIC_INT32 RD5NumericRound(const NumericInfo* info_c,const NUMERIC_INT32 prec,Numeric* c);
EXPORT NUMERIC_INT32 RD5NumericRescale(const NumericInfo* info_a,const NumericInfo* info_c,const Numeric* a,Numeric* c);