lfm/di5numeric/Di5NumericLibrary.java

	/**
	 * Performs subtraction.<br>
	 * @param[in] info_a->scale scale of a<br>
	 * @param[in] info_b->scale scale of b<br>
	 * @param[in] info_c->scale scale of c<br>
	 * @param[in] info_c->rounding_mode the rounding mode to be applied<br>
	 * @param[in] a unscaled multiplier<br>
	 * @param[in] b unscaled multiplicand<br>
	 * @param[out] c buffer to hold the unscaled value of the result (The caller must prepare the buffer beforehand.)<br>
	 * @retval 0 Success. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.<br>
	 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.<br>
	 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.<br>
	 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericRescalingMul(const NumericInfo*, const NumericInfo*, const NumericInfo*, const Numeric*, const Numeric*, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:296</i>
	 */
	int RD5NumericRescalingMul(di5numeric.NumericInfo info_a, di5numeric.NumericInfo info_b, di5numeric.NumericInfo info_c, di5numeric.Numeric a, di5numeric.Numeric b, di5numeric.Numeric c);
	/**
	 * Performs division.<br>
	 * @param[in] info_a->scale scale of a<br>
	 * @param[in] info_b->scale scale of b<br>
	 * @param[in] info_c->scale scale of c<br>
	 * @param[in] info_c->rounding_mode the rounding mode to be applied<br>
	 * @param[in] a unscaled dividend<br>
	 * @param[in] b unscaled divisor<br>
	 * @param[out] c buffer to hold the unscaled value of the result (The caller must prepare the buffer beforehand.)<br>
	 * @retval 0 Success. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.<br>
	 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.<br>
	 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.<br>
	 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericRescalingDiv(const NumericInfo*, const NumericInfo*, const NumericInfo*, const Numeric*, const Numeric*, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:314</i>
	 */
	int RD5NumericRescalingDiv(di5numeric.NumericInfo info_a, di5numeric.NumericInfo info_b, di5numeric.NumericInfo info_c, di5numeric.Numeric a, di5numeric.Numeric b, di5numeric.Numeric c);
	/**
	 * Performs comparison. NaN is assumed to be smaller than any Numeric that is not a NaN. Two NaNs are assumed to be equal.<br>
	 * @param[in] info_a->scale scale of a<br>
	 * @param[in] info_b->scale scale of b<br>
	 * @param[in] a unscaled value to be compared with b<br>
	 * @param[in] b unscaled value to be compared with a<br>
	 * @retval 1 if b is bigger than a.<br>
	 * @retval 0 if b is equal to a.<br>
	 * @retval -1 if b is smaller than a.<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericRescalingCmp(const NumericInfo*, const NumericInfo*, const Numeric*, const Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:326</i>
	 */
	int RD5NumericRescalingCmp(di5numeric.NumericInfo info_a, di5numeric.NumericInfo info_b, di5numeric.Numeric a, di5numeric.Numeric b);
	/**
	 * Performs rounding towards positive infinity. Equlvalent to numeric_round with info_c->rounding_mode=NUMERIC_ROUND_CEILING.<br>
	 * @param[in] info_c->scale scale of c<br>
	 * @param[in] prec precision (number of fractional digits) of the result <br>
	 * @param[in,out] c unscaled value to be rounded towards positive infinity<br>
	 * @retval 0 Success. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.<br>
	 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.<br>
	 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericCeil(const NumericInfo*, const NUMERIC_INT32, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:339</i>
	 */
	int RD5NumericCeil(di5numeric.NumericInfo info_c, int prec, di5numeric.Numeric c);
	/**
	 * Performs rounding towards negative infinity. Equlvalent to numeric_round with info_c->rounding_mode=NUMERIC_ROUND_FLOOR.<br>
	 * @param[in] info_c->scale scale of c<br>
	 * @param[in] prec precision (number of fractional digits) of the result<br>
	 * @param[in,out] c unscaled value to be rounded towards negative infinity<br>
	 * @retval 0 Success. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.<br>
	 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.<br>
	 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_UNDERFLOW<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericFloor(const NumericInfo*, const NUMERIC_INT32, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:352</i>
	 */
	int RD5NumericFloor(di5numeric.NumericInfo info_c, int prec, di5numeric.Numeric c);
	/**
	 * Performs rounding.<br>
	 * @param[in] info_c->scale scale of c<br>
	 * @param[in] info_c->rounding_mode rounding mode to be applied<br>
	 * @param[in] prec precision (number of fractional digits) of the result<br>
	 * @param[in,out] c unscaled value to be rounded<br>
	 * @retval 0 Success. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_TRUNCATED Success with non-zero truncation. The result is stored in c.<br>
	 * @retval NUMERIC_INFO_NAN Either a or b is NaN. c is set NaN.<br>
	 * @retval NUMERIC_INFO_OVERFLOW if overflow has occurred. c is set NaN.<br>
	 * @retval NUMERIC_INFO_UNDERFLOW if underflow has occurred. c is set NaN.<br>
	 * @see NUMERIC_INFO_TRUNCATED, NUMERIC_INFO_NAN, NUMERIC_INFO_OVERFLOW, NUMERIC_INFO_UNDERFLOW<br>
	 * Original signature : <code>NUMERIC_INT32 RD5NumericRound(const NumericInfo*, const NUMERIC_INT32, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:367</i>
	 */
	int RD5NumericRound(di5numeric.NumericInfo info_c, int prec, di5numeric.Numeric c);
	/**
	 * Original signature : <code>NUMERIC_INT32 RD5NumericRescale(const NumericInfo*, const NumericInfo*, const Numeric*, Numeric*)</code><br>
	 * <i>native declaration : inc\numeric.h:369</i>
	 */
	int RD5NumericRescale(di5numeric.NumericInfo info_a, di5numeric.NumericInfo info_c, di5numeric.Numeric a, di5numeric.Numeric c);
}
